[tool.poetry]
name = "natoencripter"
version = "0.1.0"
description = ""
authors = ["DefaultDiamond <121190031+DefaultDiamond@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12, <3.13"
pyinstaller = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
